<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    android:padding="10dip"
    android:weightSum="1"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:background="@android:color/white"
    tools:context="com.example.belletoile.cube_comp_form.CubeFormActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:background="@drawable/round_corners_background">


                <!-- Spinner Element -->
                <Spinner
                    android:id="@+id/spinner_categories"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="15dp"
                    android:prompt="@string/prompt_categories_name"
                    android:spinnerMode="dialog" />

                <TextView
                    android:id="@+id/textRoundFormat"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="25dp"
                    android:gravity="center"
                    android:text="TextView"
                    android:textSize="20dp"
                    android:textStyle="bold"
                    android:visibility="visible"
                    android:textColor="@android:color/white"/>

                <TextView
                    android:id="@+id/textCutoff"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="TextView"
                    android:textSize="20dp"
                    android:textStyle="bold"
                    android:visibility="visible"
                    android:textColor="@android:color/white"/>

                <Spinner
                    android:id="@+id/spinner_name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="40dp"
                    android:prompt="@string/prompt_name"
                    android:spinnerMode="dialog" />

            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">


                <RelativeLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:orientation="horizontal"
                        android:layout_marginTop="20dp"
                        android:id="@+id/setTime1"
                    android:visibility="gone">

                    <EditText
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:width="200dp"
                        android:id="@+id/time1"
                        android:hint="@string/time1_hint"/>


                    <CheckBox
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:layout_alignParentRight="true"
                        android:checked="false"
                        android:id="@+id/check1"/>

                </RelativeLayout>

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="horizontal"
                    android:layout_marginTop="40dp"
                    android:id="@+id/setTime2"
                    android:visibility="gone">

                    <EditText
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:width="200dp"
                        android:id="@+id/time2"
                        android:hint="@string/time2_hint"
                        android:enabled="false"/>


                    <CheckBox
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:layout_alignParentRight="true"
                        android:checked="false"
                        android:id="@+id/check2"
                        android:enabled="false"/>

                </RelativeLayout>

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="horizontal"
                    android:layout_marginTop="40dp"
                    android:id="@+id/setTime3"
                    android:visibility="gone">

                    <EditText
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:width="200dp"
                        android:id="@+id/time3"
                        android:hint="@string/time3_hint"
                        android:enabled="false"/>


                    <CheckBox
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:layout_alignParentRight="true"
                        android:checked="false"
                        android:id="@+id/check3"
                        android:enabled="false"/>

                </RelativeLayout>

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="horizontal"
                    android:layout_marginTop="40dp"
                    android:id="@+id/setTime4"
                    android:visibility="gone">

                    <EditText
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:width="200dp"
                        android:id="@+id/time4"
                        android:hint="@string/time4_hint"
                        android:enabled="false"/>


                    <CheckBox
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:layout_alignParentRight="true"
                        android:checked="false"
                        android:id="@+id/check4"
                        android:enabled="false"/>

                </RelativeLayout>

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="horizontal"
                    android:layout_marginTop="40dp"
                    android:id="@+id/setTime5"
                    android:visibility="gone">

                    <EditText
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:width="200dp"
                        android:id="@+id/time5"
                        android:hint="@string/time5_hint"
                        android:enabled="false"/>

                    <CheckBox
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:layout_alignParentRight="true"
                        android:checked="false"
                        android:id="@+id/check5"
                        android:enabled="false"/>

                </RelativeLayout>


                <Button
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/submit_time"
                    android:layout_gravity="end"
                    android:layout_marginTop="25dp"
                    android:background="@drawable/blue_round_corner_background"
                    android:text="Submit"
                    android:textColor="@drawable/white_blue_text_selector"/>
            </LinearLayout>

        </LinearLayout>

    </ScrollView>
</LinearLayout>